--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
                 </h1>
             </div>
             </a>
+            <h1>Titre</h1>
             <div>
            <h2> -We travel not to escape life, but for life not to escape us-</h2>
             </div>
